--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "socket.io-client": "^2.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=5000 react-scripts start",
     "build": "react-scripts build"
   }
 }
