--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@material-ui/icons": "^4.11.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0", 
+    "react-router-dom":"^5.2.0",
     "react-scripts": "^4.0.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.2",
